some more updates for wp launch

--- a/test/slate_tests.html
+++ b/test/slate_tests.html
@@ -27,7 +27,7 @@
     <script src="../js/min/loader.min.js" data-ad-site="slate"></script>
 
     <script src="../bower_components/qunit/qunit/qunit.js"></script>
-    <script src="slate_tests.js"></script>
+    <script src="js/slate_tests.js"></script>
 
   </body>
 </html>
