wp mobile qunit tests added. minor tweaks for testing

--- a/article_placeAd2.html
+++ b/article_placeAd2.html
@@ -73,7 +73,7 @@
 
     <div id="slug_bigbox" data-ad-type="bigbox">
       <script>
-        placeAd2(commercialNode, 'bigbox', false, '');
+        placeAd2(commercialNode, 'bigbox', 'vi', '');
       </script>
     </div>
 
@@ -87,7 +87,7 @@
 
     <div id="slug_bigbox_2">
       <script>
-        placeAd2(commercialNode, 'bigbox|2', false, '');
+        placeAd2(commercialNode, 'bigbox|2', 'vi', '');
       </script>
     </div>
 
