updates to qunit tests

--- a/test/slate_tests.html
+++ b/test/slate_tests.html
@@ -24,10 +24,11 @@
 
     <script src="../bower_components/jquery/jquery.js"></script>
 
-    <script src="../js/min/loader.min.js" data-ad-site="slate"></script>
+    <!-- gets copied temporarily when grunt qunit is run -->
+    <script src="js/min/loader.min.js" data-ad-site="slate"></script>
 
     <script src="../bower_components/qunit/qunit/qunit.js"></script>
-    <script src="js/slate_tests.js"></script>
+    <script src="tests/slate_tests.js"></script>
 
   </body>
 </html>
