--- a/test/wp_mobile_tests.html
+++ b/test/wp_mobile_tests.html
@@ -22,10 +22,11 @@
 
     <script src="../bower_components/jquery/jquery.js"></script>
 
-    <script src="../js/min/loader.min.js" data-ad-site="wp_mobile"></script>
+    <!-- gets copied temporarily when grunt qunit is run -->
+    <script src="js/min/loader.min.js" data-ad-site="wp_mobile"></script>
 
     <script src="../bower_components/qunit/qunit/qunit.js"></script>
-    <script src="js/wp_mobile_tests.js"></script>
+    <script src="tests/wp_mobile_tests.js"></script>
 
   </body>
 </html>
