--- a/test/wp_article_tests.html
+++ b/test/wp_article_tests.html
@@ -13,7 +13,8 @@
       };
     </script>
 
-    <script src="../js/min/loader.min.js" data-ad-site="wp"></script>
+    <!-- gets copied temporarily when grunt qunit is run -->
+    <script src="js/min/loader.min.js" data-ad-site="wp"></script>
 
   </head>
   <body>
@@ -135,7 +136,7 @@
 
 
     <script src="../bower_components/qunit/qunit/qunit.js"></script>
-    <script src="js/wp_article_tests.js"></script>
+    <script src="tests/wp_article_tests.js"></script>
 
   </body>
 </html>
