update to function that executes placeAd2 on queued ad spots to prevent multiple ad calls. This could have occurred when both a data-ad-type attribute and placeAd2 call is present, and the ad gets added to the queue multiple times

--- a/article_placeAd2.html
+++ b/article_placeAd2.html
@@ -15,7 +15,7 @@
   </head>
   <body>
 
-    <div id="slug_leaderboard">
+    <div id="slug_leaderboard" data-ad-type="leaderboard">
       <script>
         placeAd2(commercialNode, 'leaderboard', 'vi', '');
       </script>
