landscape/portrait ad logic change

--- a/mobile.html
+++ b/mobile.html
@@ -34,6 +34,10 @@
     Tri-tip do nulla short ribs, cillum rump prosciutto consectetur sirloin. Cow beef qui fugiat, duis minim ut. Turkey exercitation salami kielbasa, proident ad fatback pork belly pork chop adipisicing tongue esse dolore shoulder. Id pork belly nulla magna, turducken corned beef tenderloin shoulder ea enim velit biltong ribeye short ribs. Est meatloaf pastrami prosciutto.
     Pork sausage tongue brisket ground round, jerky hamburger drumstick. Proident et anim biltong, tri-tip sausage nulla. Nisi ullamco tail reprehenderit. Sint voluptate prosciutto, capicola anim ad brisket tongue ham turducken mollit proident.
     <div id="slug_t" data-ad-type="t"></div>
+
+    <script src="bower_components/enquire/dist/enquire.min.js"></script>
+
+
     <script src="js/min/loader.min.js" data-ad-site="wp_mobile"></script>
     <!--script src="http://js.washingtonpost.com/wp-srv/ad/loaders/latest/js/min/loader.min.js" data-ad-site="wp_mobile"></script-->
 
