updates to load tiffany tile stuff

--- a/article_placeAd2.html
+++ b/article_placeAd2.html
@@ -15,6 +15,12 @@
   </head>
   <body>
 
+    <div id="slug_tiffany_tile" data-ad-type="tiffany_tile">
+      <script>
+        placeAd2(commercialNode, 'tiffany_tile', false, '');
+      </script>
+    </div>
+
     <div id="slug_leaderboard" data-ad-type="leaderboard">
       <script>
         placeAd2(commercialNode, 'leaderboard', 'vi', '');
