--- a/test/wp_article_tests.html
+++ b/test/wp_article_tests.html
@@ -13,6 +13,9 @@
       };
     </script>
 
+    <!-- this is loaded via yepnope - breaks unit tests if not in here though.. investigate further -->
+    <script src="http://js.washingtonpost.com/wp-srv/ad/tiffanyTiles.js"></script>
+
     <!-- gets copied temporarily when grunt qunit is run -->
     <script src="js/min/loader.min.js" data-ad-site="wp"></script>
 
